CXF-8725: Allow RetryStrategy to optionally not retry for 404 responses. Fixing checkstyle violations, minor refactorings and fixes
(cherry picked from commit 077b0a4ede6fbbe8c7bfb468ea358c7765f12312)
(cherry picked from commit 6fb90d5db0a796d637abcd798d3bacd1667a4bc6)